add interval get

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 		<div class="row">
 			<div class="col-md-6">
-				<input type="text" class="form-control data-input" />
+				<input type="number" class="form-control data-input" value=0 />
 			</div>
 			<div class="col-md-4">
 				<select class="form-control data-type">
@@ -51,13 +51,13 @@
 
 
 			<div class="col-md-3">
-				<p class="form-control-static">BTC <span class="rs-btc">???</span></p>
+				<h4 class="form-control-static">BTC<br/><span class="rs-btc">???</span></h4>
 			</div>
 			<div class="col-md-3">
-				<p class="form-control-static">USD <span class="rs-usd">???</span></p>
+				<h4 class="form-control-static">USD<br/><span class="rs-usd">???</span></h4>
 			</div>
 			<div class="col-md-3">
-				<p class="form-control-static">VEF <span class="rs-vef">???</span></p>
+				<h4 class="form-control-static">VEF<br/><span class="rs-vef">???</span></h4>
 			</div>
 
 		</div>
