--- a/index.html
+++ b/index.html
@@ -5,22 +5,30 @@
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/css/materialize.min.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
+		<style>
+			.progress{
+				margin: 0;
+			}
+		</style>
+
+
 	</head>
 	<body>
+
+		<div class="progress">
+			<div class="indeterminate"></div>
+		</div>
 
 		<div class="navbar-fixed">
 			<nav>
  				<div class="nav-wrapper blue lighten-2">
 					<div class="nav-wrapper container">
-						<a href="#" class="brand-logo">BitcoinCalc</a>
+						<a href="#" class="brand-logo"><strong>BitcoinCalc</strong></a>
 					</div>
  				</div>
 			</nav>
 		</div>
-
-		 <div class="progress">
-				  <div class="indeterminate"></div>
-			</div>
 
 			<div class="row container">
 					<div class="col s6">
