--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/css/materialize.min.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="theme-color" content="#0d47a1">
 
 		<style>
 			.progress{
@@ -15,14 +16,13 @@
 
 	</head>
 	<body>
-
 		<div class="progress">
 			<div class="indeterminate"></div>
 		</div>
 
 			<div class="navbar-fixed">
 				<nav>
-	 				<div class="nav-wrapper blue lighten-2">
+	 				<div class="nav-wrapper blue darken-4">
 						<div class="nav-wrapper container">
 							<a href="#" class="brand-logo"><strong>BitcoinCalc</strong></a>
 						</div>
@@ -32,10 +32,14 @@
 
 			<div class="row container">
 				<div class="col s6">
-					<p class="">BTC 1<br/>USD <span class="change change-btc-usd">???</span></p>
+          <div class="card-panel yellow darken-2">
+            BTC 1<br/>USD <span class="change change-btc-usd">???</span>
+          </div>
 				</div>
 				<div class="col s6">
-					<p class="">USD 1<br/>VEF <span class="change change-usd-vef">???</span></p>
+          <div class="card-panel green darken-2">
+					  USD 1<br/>VEF <span class="change change-usd-vef">???</span>
+          </div>
 				</div>			
 			</div>
 
@@ -82,7 +86,7 @@
 		</div>
 
 		<div class="fixed-action-btn horizontal">
-			<a id="btn-update" class="btn-floating btn-large blue lighten-2">
+			<a id="btn-update" class="btn-floating btn-large blue darken-4">
 				<i class="large material-icons">sync</i>
 			</a>
 		</div>
