--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
 			<div class="row container">
 				<div class="col s6">
           <div class="card-panel yellow darken-2">
-            BTC 1<br/>USD <span class="change change-btc-usd">???</span>
+            BTC 1<br/>USD <strong class="change change-btc-usd">???</strong>
           </div>
 				</div>
 				<div class="col s6">
           <div class="card-panel green darken-2">
-					  USD 1<br/>VEF <span class="change change-usd-vef">???</span>
+					  USD 1<br/>VEF <strong class="change change-usd-vef">???</strong>
           </div>
 				</div>			
 			</div>
@@ -78,9 +78,9 @@
 
 			<div class="row container">
 				<div class="col s12">
-				<p class="">BTC <span class="rs-btc">???</span></p>
-				<p class="">USD <span class="rs-usd">???</span></p>
-				<p class="">VEF <span class="rs-vef">???</span></p>
+				<p class="">BTC <strong class="rs-btc">???</strong></p>
+				<p class="">USD <strong class="rs-usd">???</strong></p>
+				<p class="">VEF <strong class="rs-vef">???</strong></p>
 				</div>
 			</div>
 		</div>
