--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <div class="navbar-fixed">
       <nav>
-        <div class="nav-wrapper blue darken-4">
+        <div class="nav-wrapper blue darken-2">
           <div class="nav-wrapper container">
             <a href="#" class="brand-logo"><strong>BitcoinCalc</strong></a>
           </div>
@@ -78,16 +78,20 @@
 
     <div class="row container">
       <div class="col s12">
-      <p class="">BTC <span class="rs-btc">???</span></p>
-      <p class="">USD <span class="rs-usd">???</span></p>
-      <p class="">VEF <span class="rs-vef">???</span></p>
+        <ul class="collection">
+          <li class="collection-item">BTC <strong class="rs-btc">???</strong></li>
+          <li class="collection-item">USD <strong class="rs-usd">???</strong></li>
+          <li class="collection-item">VEF <strong class="rs-vef">???</strong></li>
+        </ul>
+        
       </div>
     </div>
   </div>
 
   <div class="fixed-action-btn horizontal">
-    <a id="btn-update" class="btn-floating btn-large blue darken-4">
-      <i class="large material-icons">sync</i>
+    <a id="btn-update" class="btn-floating btn-large blue darken-2">
+      <!--<i class="large material-icons">sync</i>-->
+      <i class="fa fa-refresh"></i>
     </a>
   </div>
 
