--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="indeterminate"></div>
   </div>
 
-    <div class="navbar-fixed">
+    <!-- <div class="navbar-fixed">
       <nav>
         <div class="nav-wrapper blue darken-2">
           <div class="nav-wrapper container">
@@ -43,7 +43,7 @@
           </div>
         </div>
       </nav>
-    </div>
+    </div> -->
 
     <div class="row container">
       <div class="col s6">
@@ -89,12 +89,36 @@
   </div>
 
   <div class="fixed-action-btn horizontal">
-    <a id="btn-update" class="btn-floating btn-large blue darken-2">
+    <a id="btn-update" class="btn-floating btn-large red">
       <!--<i class="large material-icons">sync</i>-->
       <i class="fa fa-refresh"></i>
     </a>
   </div>
-
+  
+  
+  
+  <footer class="page-footer blue darken-2">
+    <div class="container ">
+      <div class="row">
+        <div class="col l6 s12">
+          <h5 class="white-text"><i class="fa fa-bitcoin"></i> BitcoinCalc</h5>
+          <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+        </div>
+        <div class="col l4 offset-l2 s12">
+          <!-- <h5 class="white-text">Links</h5> -->
+          <ul>
+            <li><a class="grey-text text-lighten-3" href="https://github.com/bitcoincalc/bitcoincalc.github.io" target="_blank"><i class="fa fa-github"></i> Fork me on Github</a></li>
+            <li><a class="grey-text text-lighten-3" href="https://paypal.me/arodu" target="_blank"><i class="fa fa-paypal"></i> Donate</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <!-- <div class="footer-copyright blue darken-4">
+      <div class="container">
+      &copy; 2014 Copyright Text
+      </div>
+    </div> -->
+  </footer>
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/js/materialize.min.js"></script>
   <script src="app.js"></script>
