--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>BitcoinCalc</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta name="theme-color" content="#0d47a1">
+  <link rel="icon" type="image/png" href="favicon.png" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/css/materialize.min.css">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
@@ -68,9 +69,9 @@
       </div>
       <div class="input-field col s4">
         <select id="data-type">
-          <option value="BTC">BTC</option>
-          <option value="USD">USD</option>
-          <option value="VEF">VEF</option>
+          <option value="btc">BTC</option>
+          <option value="usd">USD</option>
+          <option value="vef">VEF</option>
         </select>
         <label>Currency</label>
       </div>
