--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </div>
 
     <div class="row container">
-      <div class="col m6">
+      <div class="col m6 s12">
         <div class="card-panel yellow darken-2 parent">
           <div class="fa fa-bitcoin child fa-5x yellow-text"></div>
           <div class="content">
@@ -61,7 +61,7 @@
           </div>
         </div>
       </div>
-      <div class="col m6">
+      <div class="col m6 s12">
         <div class="card-panel green darken-2 parent">
           <i class="fa fa-dollar fa-5x green-text child"></i>
           <div class="content">
