--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@
       color: inherit;
     }
   </style>
+	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	<script>
+		(adsbygoogle = window.adsbygoogle || []).push({
+		  google_ad_client: "ca-pub-5908036153148071",
+		  enable_page_level_ads: true
+		});
+	</script>
 </head>
 <body>
   <div class="progress">
