--- a/index.html
+++ b/index.html
@@ -5,42 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta name="theme-color" content="#0d47a1">
   <link rel="icon" type="image/png" href="favicon.png" />
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/css/materialize.min.css">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <style>
-    .progress{
-      margin: 0;
-    }
-    .parent{
-      position: relative;
-      overflow: hidden;
-      height: 95px;
-    }
-    .child{
-      position: absolute;
-      top: 10px;
-      right: 10px;
-      z-index: 50;
-    }
-    .content{
-      position: absolute;
-      top: 20px;
-      left: 10px;
-      width: 80%;
-      z-index: 100;
-    }
-    .source-link a{
-      color: inherit;
-    }
+    .progress{margin: 0;}
+    .parent{position: relative;overflow: hidden;height: 95px;}
+    .child{position: absolute;top: 10px;right: 10px;z-index: 50;}
+    .content{position: absolute;top: 20px;left: 10px;width: 80%;z-index: 100;}
+    .source-link a{color: inherit;}
   </style>
-	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-	<script>
-		(adsbygoogle = window.adsbygoogle || []).push({
-		  google_ad_client: "ca-pub-5908036153148071",
-		  enable_page_level_ads: true
-		});
-	</script>
 </head>
 <body>
   <div class="progress">
@@ -51,7 +25,7 @@
       <nav>
         <div class="nav-wrapper blue darken-2">
           <div class="nav-wrapper container">
-            <a href="#" class="brand-logo"><strong>BitcoinCalc</strong></a>
+            <a href="." class="brand-logo"><strong>BitcoinCalc</strong></a>
           </div>
         </div>
       </nav>
@@ -125,7 +99,6 @@
 		window.dataLayer = window.dataLayer || [];
 		function gtag(){dataLayer.push(arguments);}
 		gtag('js', new Date());
-
 		gtag('config', 'UA-109600725-1');
 	</script>
 
