--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <div class="content">
             <div>BTC <strong>1</strong></div>
             <div>USD <strong class="change change-btc-usd-cmc">???</strong> <span  class="source-link">(<a href="https://coinmarketcap.com/">cmc</a>)</span></div>
-            <div>VEF <strong class="change change-btc-vef-lbtc">???</strong> <span  class="source-link">(<a href="https://localbitcoins.com/">lbtc</a>)</span></div>
+            <div>VES <strong class="change change-btc-ves-lbtc">???</strong> <span  class="source-link">(<a href="https://localbitcoins.com/">lbtc</a>)</span></div>
           </div>
         </div>
       </div>
@@ -47,8 +47,8 @@
           <i class="fa fa-dollar fa-5x green-text child"></i>
           <div class="content">
             USD <strong>1</strong><br/>
-            VEF <strong class="change change-usd-vef-dt">???</strong> <span  class="source-link">(<a href="https://dolartoday.com/">dt</a>)</span><br/>
-            VEF <strong class="change change-usd-vef-lbtc">???</strong> <span class="source-link">(<a href="https://localbitcoins.com/">lbtc</a>/<a href="https://coinmarketcap.com/">cmc</a>)</span>
+            VES <strong class="change change-usd-ves-dt">???</strong> <span  class="source-link">(<a href="https://dolartoday.com/">dt</a>)</span><br/>
+            VES <strong class="change change-usd-ves-lbtc">???</strong> <span class="source-link">(<a href="https://localbitcoins.com/">lbtc</a>/<a href="https://coinmarketcap.com/">cmc</a>)</span>
           </div>
         </div>
       </div>
@@ -64,7 +64,7 @@
         <select id="data-type">
           <option value="btc">BTC</option>
           <option value="usd">USD</option>
-          <option value="vef">VEF</option>
+          <option value="ves">VES</option>
         </select>
         <label>Currency</label>
       </div>
@@ -75,7 +75,7 @@
         <ul class="collection">
           <li class="collection-item">BTC <strong class="rs-btc">???</strong></li>
           <li class="collection-item">USD <strong class="rs-usd">???</strong></li>
-          <li class="collection-item">VEF <strong class="rs-vef">???</strong></li>
+          <li class="collection-item">VES <strong class="rs-ves">???</strong></li>
         </ul>
 
       </div>
