--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <style>
     .progress{margin: 0;}
-    .parent{position: relative;overflow: hidden;height: 95px;}
+    .parent{position: relative;overflow: hidden;}
     .child{position: absolute;top: 10px;right: 10px;z-index: 50;}
-    .content{position: absolute;top: 20px;left: 10px;width: 80%;z-index: 100;}
     .source-link a{color: inherit;}
+    .card-panel{padding: 15px;}
   </style>
 </head>
 <body>
@@ -48,6 +48,7 @@
           <div class="content">
             USD <strong>1</strong><br/>
             VES <strong class="change change-usd-ves-dt">???</strong> <span  class="source-link">(<a href="https://dolartoday.com/">dt</a>)</span><br/>
+            VES <strong class="change change-usd-ves-airtm">???</strong> <span  class="source-link">(<a href="https://airtmrates.com/">airtm</a>)</span><br/>
             VES <strong class="change change-usd-ves-lbtc">???</strong> <span class="source-link">(<a href="https://localbitcoins.com/">lbtc</a>/<a href="https://coinmarketcap.com/">cmc</a>)</span>
           </div>
         </div>
